Add spacer between table rows

--- a/views/index.haml
+++ b/views/index.haml
@@ -26,3 +26,5 @@
                     =commit['id']
                 %li=commit['timestamp']
                 %li=commit['message']
+      %tr.spacer
+        %td{:colspan=>4} 
