--- a/views/index.haml
+++ b/views/index.haml
@@ -2,10 +2,10 @@
 .config
   .repos
     %ul
-      -repositories.keys.each do |key|
+      -config['repositories'].keys.each do |key|
         %li
-          %a{:href=>repositories[key]['url']} 
-            ="#{key} #{repositories[key]['branch']}"
+          %a{:href=>config['repositories'][key]['url']} 
+            ="#{key} #{config['repositories'][key]['branch']}"
 
 
 - if @pushes
@@ -23,7 +23,17 @@
           %th.side Push
           %td{:style=>'font-size:90%'} 
             =push.created_at.strftime("%B %d - %H:%M")
-          %td=push.status
+          %td
+            =push.status
+            - if push.received? || push.undeployed?
+              %form{:method=>:post, :action=>'/deploy'}
+                %input{:type=>:hidden, :name=>:id, :value=>push.id}
+                %input{:type=>:submit, :value=>:deploy}
+            - elsif push.deployed?
+              %form{:method=>:post, :action=>'/undeploy'}
+                %input{:type=>:hidden, :name=>:id, :value=>push.id}
+                %input{:type=>:submit, :value=>:undeploy}
+
           %td=push['after']
           %td
             =push['repository']['name']
