Write deployment descriptors

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,8 +3,8 @@
   %head
     %meta{:charset=>"utf-8"}
     %title Stomp Box 
-    %link{:rel=>"stylesheet", :type=>"text/css", :href=>"/html5reset.css"}
-    %link{:rel=>"stylesheet", :type=>"text/css", :href=>"/styles.css"}
+    %link{:rel=>"stylesheet", :type=>"text/css", :href=>"html5reset.css"}
+    %link{:rel=>"stylesheet", :type=>"text/css", :href=>"styles.css"}
 
     /[if IE]
       %script{:src=>"http://html5shiv.googlecode.com/svn/trunk/html5.js"}
