--- a/views/layout.haml
+++ b/views/layout.haml
@@ -5,6 +5,7 @@
     %title Stomp Box 
     %link{:rel=>"stylesheet", :type=>"text/css", :href=>"html5reset.css"}
     %link{:rel=>"stylesheet", :type=>"text/css", :href=>"styles.css"}
+    %script{:src=>"https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"}
 
     /[if IE]
       %script{:src=>"http://html5shiv.googlecode.com/svn/trunk/html5.js"}
@@ -13,3 +14,6 @@
   %body
     .container
       = yield
+      %footer
+        This software brought to you by 
+        %a{:href=>'http://projectodd.org'} project : odd
