Move gem dependencies to new names. Integrate TorqueBox authentication. Add login/logout screen/functionality

--- a/app/views/pushes/index.haml
+++ b/app/views/pushes/index.haml
@@ -1,4 +1,8 @@
 %h1 Stomp Box :: Dashboard 
+
+- [:error, :notice].each do |level|
+  .flash{:class=>level}= flash[level]
+
 .config
   %h2 Repositories Managed
   .repositories
