--- a/app/views/layout.haml
+++ b/app/views/layout.haml
@@ -16,11 +16,14 @@
       .menu{:style=>'float:right;display:inline-block'}
         %a{:href=>home_path} Dashboard
         \|
-        %a{:href=>path_to("repositories")} Repositories
+        %a{:href=>to("repositories")} Repositories
         \|
-        - push_path = path_to( "push/#{StompBox::Config.get('api_key')}" )
+        - push_path = to( "push/#{StompBox::Config.get('api_key')}" )
         %a{:href=>push_path}
           GitHub Push URL
+        - if ENV['REQUIRE_AUTHENTICATION']
+          \|
+          %a{:href=>to("logout")} Logout
       .clearfix{:style=>'clear:left;'}
         &nbsp;
       = yield
