--- a/app/views/styles.scss
+++ b/app/views/styles.scss
@@ -28,10 +28,11 @@ footer {
 }
 
 .container h1 {
-  border-bottom: #295666 4px solid;
   font-size: 24px;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   color: #295666;
+  text-align: right;
+  text-shadow: #aaa 2px 2px 2px;
 }
 
 .container h2 {
@@ -61,6 +62,22 @@ input[type=submit] {
   border: none;
   cursor: pointer;
   color: #1e317f;
+}
+
+#header {
+  background-color: #295666;
+  padding: 20px 10px 5px;
+  margin-bottom: 10px;
+  h1 { 
+    color: #eee;
+    text-align: left;
+    text-shadow: #111 2px 2px 2px;
+  }
+  .menu {
+    float: right;
+    display: inline-block;
+    a { color: #eee; }
+  }
 }
 
 #login_form {
