Add flash messages/styling

--- a/app/views/layout.haml
+++ b/app/views/layout.haml
@@ -27,8 +27,13 @@
             %a{:href=>to("logout")} Logout
         %h1 TorqueBox::StompBox
 
+
       #content
         = yield
+
+      - [:error, :notice].each do |level|
+        - if flash.has? level
+          .flash{:class=>level}= flash[level]
 
       %footer#footer
         This software brought to you by 
