--- a/app/views/styles.scss
+++ b/app/views/styles.scss
@@ -12,6 +12,15 @@ footer {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.flash {
+  text-align: center;
+  margin: 0 40px;
+  font-size: 14px;
+  padding: 12px;
+  border: #999 3px solid;
+  color: #295666;
+}
+
 .container a {
   text-decoration: none;
   color: #768974;
