--- a/app/views/css/styles.scss
+++ b/app/views/css/styles.scss
@@ -5,6 +5,26 @@ footer {
   margin-top: 30px;
 }
 
+#facebox .popup .content {
+  font-family: Arial, Helvetica, sans-serif;
+  h2 {
+    border-bottom: #295666 2px solid;
+    font-size: 18px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    color: #295666;
+  }
+  label {
+    font-size: 14px;
+  }
+}
+
+.action {
+  margin: 10px 10px 15px 0;
+  font-size: 16px;
+  color: #768994;
+}
+
 .container {
   padding: 20px;
   margin: auto auto 40px;
