Use facebox for repository edit forms

--- a/app/views/css/styles.scss
+++ b/app/views/css/styles.scss
@@ -19,6 +19,13 @@ footer {
   }
 }
 
+.panel a[rel=facebox] {
+  background-color: #ddd;
+  color: #1e317f;
+  font-size: 11px;
+  padding: 3px 6px;
+}
+
 .action {
   margin: 10px 10px 15px 0;
   font-size: 16px;
