Make push url link in header a popup instead of a link to a broken url

--- a/app/views/css/styles.scss
+++ b/app/views/css/styles.scss
@@ -26,6 +26,12 @@ footer {
   padding: 3px 6px;
 }
 
+#push-url {
+  padding: 20px;
+  margin: 20px;
+  border: 3px solid #295666;
+}
+
 .action {
   margin: 10px 10px 15px 0;
   font-size: 16px;
