--- a/app/views/repositories/form.haml
+++ b/app/views/repositories/form.haml
@@ -4,4 +4,9 @@
 %br
 %input{:type=>:text, :name=>'repository[branch]', :value=>repository.branch}
 %label{:for=>'repository[branch]'} Branch
+%p
+  %label{:for=>'repository[environment]'} TorqueBox configuration as YAML
+  %br
+  %textarea{:name=>'repository[environment]'}
+    =repository.environment
 
