--- a/app/views/layout.haml
+++ b/app/views/layout.haml
@@ -6,12 +6,12 @@
     %link{:rel=>"stylesheet", :type=>"text/css", :href=>"#{to('css/html5reset.css')}"}
     %link{:rel=>"stylesheet", :type=>"text/css", :href=>"#{to('css/styles.css')}"}
     %link{:rel=>"stylesheet", :type=>"text/css", :href=>"#{to('css/facebox.css')}"}
-    %script{:src=>"https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"}
-    %script{:src=>"#{to('javascript/facebox.js')}"}
-    %script{:type=>'text/javascript'}
-      /$.facebox.settings.closeImage = "#{to('/images/closelabel.png')}"
-      /$.facebox.settings.loadingImage = "#{to('/images/loading.gif')}"
-      /jQuery(document).ready(function($) { $('a[rel*=facebox]').facebox() })
+    /%script{:src=>"https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"}
+    /%script{:src=>"#{to('javascript/facebox.js')}"}
+    /%script{:type=>'text/javascript'}
+    /$.facebox.settings.closeImage = "#{to('/images/closelabel.png')}"
+    /$.facebox.settings.loadingImage = "#{to('/images/loading.gif')}"
+    /jQuery(document).ready(function($) { $('a[rel*=facebox]').facebox() })
       
       
 
