Turn script validation off in Capybara

--- a/app/views/layout.haml
+++ b/app/views/layout.haml
@@ -6,7 +6,7 @@
     %link{:rel=>"stylesheet", :type=>"text/css", :href=>"#{to('css/html5reset.css')}"}
     %link{:rel=>"stylesheet", :type=>"text/css", :href=>"#{to('css/styles.css')}"}
     %link{:rel=>"stylesheet", :type=>"text/css", :href=>"#{to('css/facebox.css')}"}
-    /%script{:src=>"https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"}
+    %script{:src=>"https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"}
     /%script{:src=>"#{to('javascript/facebox.js')}"}
     /%script{:type=>'text/javascript'}
     /$.facebox.settings.closeImage = "#{to('/images/closelabel.png')}"
